# miniEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: basic.frag
src/: main.cpp
src/core/: Aplication.cpp  Aplication.h  Application.cpp  Application.h
src/graphics/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/objects/: Triangle.h
src/scene/: Scene.h
